Updates website and added PLL trainer and Mirror-inverse tool

--- a/index.html
+++ b/index.html
@@ -1,7 +1,110 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+<!-- saved from url=(0049)https://getbootstrap.com/docs/4.0/examples/album/ -->
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="icon" href="https://getbootstrap.com/favicon.ico">
+
+    <title>Album example for Bootstrap</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="css/album.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
+
+  </head>
+
+  <body>
+
+    <header>
+      <div class="collapse bg-dark" id="navbarHeader">
+
+
+      </div>
+      <div class="navbar navbar-dark bg-dark box-shadow">
+        <div class="container d-flex justify-content-between">
+          <a href="https://getbootstrap.com/docs/4.0/examples/album/#" class="navbar-brand d-flex align-items-center">
+            
+            <strong>Album</strong>
+          </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </div>
+      </div>
+    </header>
+
+    <main role="main">
+
+      <section class="jumbotron text-center">
+        <div class="container">
+          <h1 class="jumbotron-heading">Moreno van Rooijen</h1>
+          <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. 
+		  Make it short and sweet, but not too short so folks don't simply skip over it entirely.</p>
+          <p>
+            <a href="https://getbootstrap.com/docs/4.0/examples/album/#" class="btn btn-primary my-2">Main call to action</a>
+            <a href="https://getbootstrap.com/docs/4.0/examples/album/#" class="btn btn-secondary my-2">Secondary action</a>
+          </p>
+        </div>
+      </section>
+
+      <div class="album py-5 bg-light">
+        <div class="container">
+
+          <div class="row">
+
+<div class="col-md-4 mb-4 box-shadow">
+			<div class="card">
+			  <img src="images/mirror-inverse.png"></img>
+                  <div class="card-body">
+				  <h4>Mirror and Inverse</h4>
+                  <p class="card-text">A simple tool used to calculate the inverse and mirror of algs.</p>
+            <a href="projects/mirror-inverse/index.html" class="btn btn-primary">Go to project</a>
+
+              </div>              </div>
+
+            </div>
+			<div class="col-md-4  mb-4 box-shadow">
+			<div class="card">
+
+			  <img src="images/plltrainer.png"></img>
+                  <div class="card-body">
+				  <h4>PLL trainer</h4>
+                  <p class="card-text">A tool to train and track your PLL's Made by someone else but adjusted it slightly.</p>
+            <a href="projects/pll-trainer/index.html" class="btn btn-primary">Go to project</a>
+
+                </div>
+				</div>
+				</div>
+				<div class="col-md-4  mb-4 box-shadow">
+			<div class="card">
+
+			  <img src="images/plltrainer.png"></img>
+                  <div class="card-body">
+				  <h4>PLL trainer</h4>
+                  <p class="card-text">A tool to train and track your PLL's Made by someone else but adjusted it slightly.</p>
+            <a href="projects/pll-trainer/index.html" class="btn btn-primary">Go to project</a>
+</div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </main>
+
+    <footer class="text-muted">
+      <div class="container">
+        <p class="float-right">
+          <a href="#">Back to top</a>
+        </p>
+      </div>
+    </footer>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="js/bootstrap.min.js"></script>
