Add other projects

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
           <div class="row">
 
-<div class="col-md-4 mb-4 box-shadow">
+			<div class="col-md-4 mb-4 box-shadow">
 			<div class="card">
 			  <img src="images/mirror-inverse.png"></img>
                   <div class="card-body">
@@ -80,17 +80,40 @@
                 </div>
 				</div>
 				</div>
-				<div class="col-md-4  mb-4 box-shadow">
+				
+			<div class="col-md-4 mb-4 box-shadow">
 			<div class="card">
-
-			  <img src="images/plltrainer.png"></img>
+			  <img src="images/bld_metronome.png"></img>
                   <div class="card-body">
-				  <h4>PLL trainer</h4>
-                  <p class="card-text">A tool to train and track your PLL's Made by someone else but adjusted it slightly.</p>
-            <a href="projects/pll-trainer/index.html" class="btn btn-primary">Go to project</a>
-</div>
+				  <h4>Blind Metronome</h4>
+                  <p class="card-text"></p>
+            <a href="projects/blind_metronome/index.html" class="btn btn-primary">Go to project</a>
+
+              </div>
+			  </div>
             </div>
-          </div>
+			<div class="col-md-4 mb-4 box-shadow">
+			<div class="card">
+			  <img src="images/color_training.png"></img>
+                  <div class="card-body">
+				  <h4>colorscheme</h4>
+                  <p class="card-text"></p>
+            <a href="projects/colorscheme/index.html" class="btn btn-primary">Go to project</a>
+
+              </div>
+			  </div>
+            </div>
+			<div class="col-md-4 mb-4 box-shadow">
+			<div class="card">
+			  <img src="images/exec-trainer.png"></img>
+                  <div class="card-body">
+				  <h4>exec-trainer</h4>
+                  <p class="card-text"></p>
+            <a href="projects/exec-trainer/index.html" class="btn btn-primary">Go to project</a>
+
+              </div>
+			  </div>
+            </div>
         </div>
       </div>
 
